--- a/index.html
+++ b/index.html
@@ -1,1 +1,79 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Module 3 Solution</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      
+      <div class="navbar-header">
+        <!-- Mobile menu button -->
+        <button type="button"
+                class="navbar-toggle collapsed visible-xs"
+                data-toggle="collapse"
+                data-target="#mobile-menu"
+                aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Food, LLC</a>
+      </div>
+
+      <!-- Mobile dropdown menu -->
+      <div class="collapse navbar-collapse" id="mobile-menu">
+        <ul class="nav navbar-nav visible-xs text-center">
+          <li><a href="#">Chicken</a></li>
+          <li><a href="#">Beef</a></li>
+          <li><a href="#">Sushi</a></li>
+        </ul>
+      </div>
+
+    </div>
+  </nav>
+
+  <!-- PAGE HEADING -->
+  <div class="container">
+    <h1 class="text-center">Our Menu</h1>
+  </div>
+
+  <!-- TALL SECTION -->
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-xs-12 tall-section">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non
+          risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing
+          nec, ultricies sed, dolor. Cras elementum ultrices diam.
+          Maecenas ligula massa, varius a, semper congue, euismod non, mi.
+        </p>
+        <p>
+          Proin porttitor, orci nec nonummy molestie, enim est eleifend mi,
+          non fermentum diam nisl sit amet erat. Duis semper.
+        </p>
+        <p>
+          (Repeat text or scroll — this section is intentionally tall.)
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- jQuery -->
+  <script src="js/jquery.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="js/bootstrap.min.js"></script>
+</body>
+</html>
